# AI-test

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-optional.txt  requirements.txt
backend/: __init__.py  main.py  settings.py
backend/agents/: __init__.py  base.py  critic_agent.py  exploit_agent.py  orchestrator.py  post_exploit_agent.py  recon_agent.py  red_team_agent.py  report_agent.py  scanner_agent.py  validator.py
backend/api/: __init__.py  deps.py  schemas.py  websocket.py
backend/api/routes/: auth.py  engagements.py  (+3 more)
backend/database/: models.py  session.py
backend/llm/: __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  router.py
backend/mcp/: __init__.py  server.py
backend/pentest/: __init__.py  active_directory.py  api.py  infrastructure.py  llm_ai.py  mobile.py  network.py  registry.py  web.py
backend/reporting/: __init__.py  generator.py  screenshot.py
backend/tools/: __init__.py  executor.py  kali_catalog.py  stealth.py
backend/utils/: logger.py  security.py
config/: default.yaml  kali_tools.yaml  llm_providers.yaml  pentest_profiles.yaml
config/knowledge/: false_positives.yaml
config/prompts/: senior_mindset.md  system.md
docs/: AGENT_INTELLIGENCE.md  ARCHITECTURE.md  INSTALL.md  RED_TEAM.md  SECURITY.md  USAGE.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  ws.js
scripts/: bootstrap_kali.sh  install.sh  setup_ollama.sh  start.sh
tests/: test_smoke.py  test_validator.py
